src/test/ui/crateresolve1/crateresolve1.stderr
error[E0464]: multiple matching crates for `crateresolve1`
  --> $DIR/crateresolve1.rs:6:1
   |
LL | extern crate crateresolve1;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: candidates:
           crate `crateresolve1`: $TEST_BUILD_DIR/crateresolve1/crateresolve1/auxiliary/libcrateresolve1-3.so
           crate `crateresolve1`: $TEST_BUILD_DIR/crateresolve1/crateresolve1/auxiliary/libcrateresolve1-1.so
           crate `crateresolve1`: $TEST_BUILD_DIR/crateresolve1/crateresolve1/auxiliary/libcrateresolve1-2.so

error[E0463]: can't find crate for `crateresolve1`
  --> $DIR/crateresolve1.rs:6:1
   |
LL | extern crate crateresolve1;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0463`.
